[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scene/MenuImpostazioni/MenuImpostazioniLivello.tscn" type="PackedScene" id=1]
[ext_resource path="res://Immagini/ASchermo/IconaMenuImpostazioni.png" type="Texture" id=2]
[ext_resource path="res://Scene/MenuImpostazioni/IconaMenuImpostazioni.gd" type="Script" id=3]
[ext_resource path="res://Scene/MenuImpostazioni/MenuImpostazioniMappa.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scene/Opzioni/PanelOpzioni.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="IconaMenuImpostazioni" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = 15.0
margin_right = 11.0
margin_bottom = 15.0
script = ExtResource( 3 )

[node name="MenuImpostazioniLivello" parent="." instance=ExtResource( 1 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -542.5
margin_right = 512.0
margin_bottom = 542.5

[node name="MenuImpostazioniMappa" parent="." instance=ExtResource( 4 )]
visible = false
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0

[node name="Button" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -99.9999
margin_bottom = 96.0
rect_scale = Vector2( 0.7, 0.7 )
focus_mode = 0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 2 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
icon = ExtResource( 2 )
expand_icon = true

[node name="Panel" parent="." instance=ExtResource( 5 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -232.0
margin_top = -173.5
margin_right = 232.0
margin_bottom = 173.5

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[editable path="Panel"]
[editable path="Panel/Opzioni"]
[editable path="Panel/Opzioni/Difficulty"]
